# xiaozhi_client

./: .gitignore  README.md  audio.md  cert.pem  chat.html  client.js  device-activator.js  devices.js  example.js  index.js  install.bat  install.sh  key.pem  package-lock.json  package.json  pnpm-workspace.yaml  server.js  test.js  test_wifi.sh  voice.js  webServer.js  websocket.js  xiaozhi-simple-demo.html  xiaozhi-websocket-api-doc.md
.device-config/: .device_fingerprint.json  devices_registry.json  efuse.json  efuse_8a:fa:98:9d:01:a0.json  efuse_df:52:34:be:fa:38.json  efuse_e7:40:56:7a:13:9f.json  efuse_f2:68:cb:b2:c5:93.json  efuse_virtual_1750904832000_twx0at.json  efuse_virtual_1750904915224_sdfrr0.json
.device-config/activation/: df:52:34:be:fa:38.json
.github/workflows/: release.yml
rust/: .gitignore  Cargo.toml  MCP_README.md  MCP_TROUBLESHOOTING.md  README.md  test_license.sh
rust/examples/: camera_vision_plugin.rs  esp32_mcp_server.rs  hello_world_plugin.rs  mic_test.rs  player_test.rs  recorder_test.rs  simple_chat.rs
rust/src/: client.rs  config.rs  crypto.rs  device_manager.rs  device_status.rs  fingerprint.rs  lib.rs  main.rs  mcp.rs  stdio_controller.rs  types.rs  websocket.rs
rust/src/mcp/: mod.rs  resources.rs  tools.rs  types.rs
rust/src/mcp/tools/: hello_world.rs  mod.rs  plugin_manager.rs  registry.rs  wifi.rs
rust/src/ui/: color.rs  menu.rs  mod.rs
rust/src/voice/: mod.rs  player.rs  recorder.rs
rust/tools/: license_generator.rs
src/: AudioPlayer.js  client.js  device-activator.js  device-status.js  index.js  player.js  voice.js  websocket.js
src/adapters/browser/: browser-audio-player-opus.js  browser-websocket.js
src/adapters/node/: node-audio-player.js  node-websocket.js
src/interfaces/: audio-interfaces.js
src/web/: chat.html  index.js
