[package]
name = "xiaozhi_client"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of XiaoZhi voice assistant client"
authors = ["shadow"]
license = "MIT"

[[bin]]
name = "xiaozhi_client"
path = "src/main.rs"

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[dependencies]
# WebSocket 通信
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tokio = { version = "1.0", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# 音频处理
cpal = "0.15"
opus = "0.3"

# 异步和并发
futures = "0.3"
tokio-stream = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID 和加密
uuid = { version = "1.0", features = ["v4", "serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
