[package]
name = "xiaozhi_client"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of XiaoZhi voice assistant client"
authors = ["shadow"]
license = "MIT"
default-run = "xiaozhi_client"

[[bin]]
name = "xiaozhi_client"
path = "src/main.rs"

[[bin]]
name = "license_generator"
path = "tools/license_generator.rs"

[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[[example]]
name = "mic_test"
path = "examples/mic_test.rs"

[dependencies]
# WebSocket 通信
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tokio = { version = "1.0", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# 音频处理
cpal = "0.15"
opus = "0.3"

# 异步和并发
futures = "0.3"
tokio-stream = "0.1"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID 和加密
uuid = { version = "1.0", features = ["v4", "serde"] }

# 加密库
aes-gcm = "0.10.1"
base64 = "0.21.0"

# 命令行参数解析
clap = { version = "4.0", features = ["derive"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }
rubato = "0.12.0"

[dev-dependencies]
tokio-test = "0.4"
